--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
     <table class="imgtable">
       <tr>
         <td>
-          <a href="https://tuteng0915.github.io/"><img src="picture/photo.jpg" alt="alt text" width="120px" /></a>&nbsp;
+          <a href="https://tuteng0915.github.io/"><img src="picture/photo.png" alt="alt text" width="120px" /></a>&nbsp;
         </td>
         <td align="left">
-          <p>硕士研究生,中共党员<br />
+          <p>本科生<br />
             计算机科学与技术, <a href="https://www.cs.tsinghua.edu.cn//">计算机科学与技术系</a>, <br />
             <a href="https://www.tsinghua.edu.cn//">清华大学</a>, <br />
             北京, 清华园街道 100084, 中国 <br />
             手机: +86 186 1297 0915 <br />
             邮箱: tut19@mails.tsinghua.edu.cn <br />
+            邮箱: leotuteng@126.com <br />
             <br />
-            <a href="pdf/涂腾个人简历.pdf">[简历]</a>
+            <a href="pdf/TuTeng_CV_en.pdf">[简历]</a>
             <a href="https://github.com/tuteng0915">[GitHub]</a>
           </p>
         </td>
@@ -111,63 +112,6 @@
         </p>
       </li>
     </ul>
-    <ul>
-      <li>
-        <p><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/dac.4919">An Efficient on-Demand Charging Scheduling
-            Scheme for Mobile Charging Vehicle</a> <br />
-          Ping Zhong, <b>AiKun Xu</b>, Jianliang Gao, Yiming Zhang and Yingwen Chen <br />
-          <i>International Journal of Communication Systems <b>(IJCS)</b>, 2021. [JCR Q3]<a
-              href="pdf/IJCS.pdf">[PDF]</a></i>
-        </p>
-      </li>
-    </ul>
-    <ul>
-      <li>
-        <p><a href="https://ieeexplore.ieee.org/abstract/document/9066134">An Optimization Deployment Scheme for Static
-            Charging Piles Based on Dynamic of Shared E-Bikes</a> <br />
-          Ping Zhong, <b>AiKun Xu</b>, Yuanming Chen, Feng Gao and Guihua Duan <br />
-          <i>2019 15th International Conference on Mobile Ad-Hoc and Sensor Networks <b>(MSN-19)</b>. [CCF C]<a
-              href="pdf/MSN19.pdf">[PDF]</a></i>
-        </p>
-      </li>
-    </ul>
-    <ul>
-      <li>
-        <p><a href="https://www.inderscienceonline.com/doi/abs/10.1504/IJSNET.2021.118489">A Prediction Model of Death
-            Probability for Guiding Wireless Recharging in Sensor Networks</a> <br />
-          Ping Zhong, <b>AiKun Xu</b>, Shu Lin and Xiaoyan Kui <br />
-          <i>International Journal of Sensor Networks <b>(IJSNET)</b>, 2021. [JCR Q4]<a
-              href="pdf/5.IJSNet.pdf">[PDF]</a></i>
-        </p>
-      </li>
-    </ul>
-    <ul>
-      <li>
-        <p><a href="https://www.editorialmanager.com/ppna/default1.aspx">An Optimal Deployment Scheme for Extremely Fast
-            Charging Stations</a> <br />
-          Ping Zhong, <b>AiKun Xu</b>, Yilin Kang, Shigeng Zhang and Yiming Zhang<br />
-          <i>Peer-to-Peer Networking and Applications <b>(P2PNA)</b>, 2022. Accepted, [JCR Q2]<a
-              href="pdf/MDDC.pdf">[PDF]</a></i>
-        </p>
-      </li>
-    </ul>
-    <ul>
-      <li>
-        <p><a href="https://ieee-itss.org/pub/t-its">THAN: Multi-Modal Transportation Recommendation with Heterogeneous
-            Graph Attention Networks</a> <br />
-          <b>AiKun Xu</b>, Ping Zhong, Yilin Kang, Jiongqiang Duan, Mingming Lu and Chuan Shi <br />
-          <i>IEEE Transactions on Intelligent Transportation Systems <b>(T-ITS)</b>, 2021. Under Review, [JCR Q1]</i>
-        </p>
-      </li>
-    </ul>
-    <h2>发明专利</h2>
-    <ul>
-      <li>
-        <p>基于团划分的静态充电桩部署方法 <br />
-          钟萍, <b>徐爱昆</b>, 奎晓燕, 张艺雯<br />
-          国家发明专利, 公开号:CN109872070A</p>
-      </li>
-    </ul>
     <h2>其他项目</h2>
     <ul>
       <li>
@@ -194,7 +138,7 @@
     </ul>
     <div id="footer">
       <div id="footer-text">
-        <br>Page generated 2021-09-18, by <a href="https://xuaikun.github.io/">Aikun Xu</a>.
+        <br>Page Updated at 2023-06-07, by <a href="https://tuteng0915.github.io/">Teng Tu</a>.
       </div>
     </div>
   </div>
