--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
     <table class="imgtable">
       <tr>
         <td>
-          <a href="https://tuteng0915.github.io/"><img src="picture/photo.png" alt="alt text" width="120px" /></a>&nbsp;
+          <a href="https://tuteng0915.github.io/"><img src="picture/photo.png" alt="alt text" width="180px" /></a>&nbsp;
         </td>
         <td align="left">
-          <p>本科生<br />
+          <p>基本信息<br />
             计算机科学与技术, <a href="https://www.cs.tsinghua.edu.cn//">计算机科学与技术系</a>, <br />
             <a href="https://www.tsinghua.edu.cn//">清华大学</a>, <br />
             北京, 清华园街道 100084, 中国 <br />
             手机: +86 186 1297 0915 <br />
             邮箱: tut19@mails.tsinghua.edu.cn <br />
             邮箱: leotuteng@126.com <br />
+            wechat: TT-20000915-tuteng <br />
+            清华大学团委图像生成人工智能研究团队负责人 <br />
             <br />
             <a href="pdf/TuTeng_CV_en.pdf">[简历]</a>
             <a href="https://github.com/tuteng0915">[GitHub]</a>
@@ -33,33 +35,32 @@
         </td>
       </tr>
     </table>
+
     <h2>关于我</h2>
-    <p>我现在是一名硕士三年级的学生(将于2022年6月毕业), 就读于<a href="http://www.csu.edu.cn/">中南大学</a> <a
-        href="https://cse.csu.edu.cn/">计算机学院</a>。
-      在此之前, 我于2019年6月在 <a href="https://www.scuec.edu.cn/">中南民族大学</a> 计算机科学学院 智能科学与技术专业获得了学士学位, 专业排名:(1/56)。</p>
-    <p>我的研究兴趣主要包括: 图神经网络, 图数据挖掘, 机器学习, 智慧交通, 无线传感器网络 等。</p>
+
+    <p>我2020年起在清华大学知识工程实验室实习, 2021年至2022年在清华大学积极心理学研究中心任科研助理</p>
+    <p>我的研究兴趣主要包括: 视觉语言模型, 大规模语言模型, 知识工程与认知, 图数据挖掘 等。</p>
+    
     <h2>教育经历</h2>
+
     <table class="imgtable">
       <tr>
         <td>
           <a href="https://www.csu.edu.cn/"><img src="picture/csu_logo.png" alt="中南大学" width="80px" /></a>&nbsp;
         </td>
         <td align="left">
-          <h3>硕士 <a href="https://www.csu.edu.cn/">中南大学</a> (2019.9 ~ 2022.7)</h3>
+          <h3> 本科 <a href="https://www.csu.edu.cn/">清华大学</a> (2019.9 ~ 2023.6)</h3>
           <ul>
             <li>
-              <p>保研至中南大学(双一流A类高校、985、211)</p>
+              <p><b>院系专业</b>: 计算机科学与技术系, 计算机科学与技术</p>
             </li>
             <li>
-              <p><b>院系专业</b>: 计算机学院, 计算机科学与技术</p>
-            </li>
-            <li>
-              <p><b>GPA</b>: 3.5/4.0 <a href="pdf/transcript_csu_ch.pdf">[中文成绩单]</a><a
+              <p><b>GPA</b>: 3.75/4.0 <a href="pdf/transcript_csu_ch.pdf">[中文成绩单]</a><a
                   href="pdf/transcript_csu_en.pdf">[English Transcript]</a></p>
             </li>
             <li>
               <p><b>奖励荣誉</b>:
-                国奖奖学金(2021.10)、学业奖学金一等奖(2021.9)、学业奖学金一等奖(2020.9)、暑期学校优秀学员(2020.9)、优秀共青团员(2020.9)、中南大学推免奖学金(2019.9)
+                学业优秀奖学金(2022.12), 社会工作优秀奖学金(2022.12)
                 <br />
               </p>
             </li>
@@ -67,34 +68,9 @@
         </td>
       </tr>
     </table>
-    <table class="imgtable">
-      <tr>
-        <td>
-          <a href="https://www.scuec.edu.cn/"><img src="picture/scuec.jpg" alt="中南民族大学" width="80px" /></a>&nbsp;
-        </td>
-        <td align="left">
-          <h3>本科 <a href="https://www.scuec.edu.cn/">中南民族大学</a> (2015.9 ~ 2019.7)</h3>
-          <ul>
-            <li>
-              <p><b>院系专业</b>: 计算机科学学院, 智能科学与技术</p>
-            </li>
-            <li>
-              <p><b>专业排名</b>: 1/56; <b>GPA</b>: 4.02/5.0 <a href="pdf/transcript_scuec.jpg">[成绩单]</a></p>
-            </li>
-            <li>
-              <p><b>奖学金</b>: 国家奖学金(2016.10)、一等优秀奖学金(2016.9)、国家励志奖学金(2017.11)、优秀毕业生一等奖学金(2019.5) <br /></p>
-            </li>
-            <li>
-              <p><b>荣誉称号</b>: 校“三好学生”荣誉称号、校“优秀共青团员”荣誉称号、校“自强自立之星”荣誉称号 <br /></p>
-            </li>
-            <li>
-              <p><b>比赛获奖</b>: 蓝桥杯程序设计大赛湖北省二等奖(两次)、第十届中国大学生计算机设计大赛二等奖、2018中国工程机器人大赛暨国际公开赛一等奖等</p>
-            </li>
-          </ul>
-        </td>
-      </tr>
-    </table>
+
     <h2>学术论文</h2>
+
     <ul>
       <li>
         <p><a href="http://jos.org.cn/jos/article/abstract/5975?st=search">一种高效低能耗移动数据采集与无线充电策略</a> <br />
@@ -103,6 +79,7 @@
         </p>
       </li>
     </ul>
+
     <ul>
       <li>
         <p><a href="https://www.sciencedirect.com/science/article/abs/pii/S1574119221000560">EMPC: Energy-Minimization
@@ -112,35 +89,24 @@
         </p>
       </li>
     </ul>
+
     <h2>其他项目</h2>
+
     <ul>
       <li>
-        <p>具有个性化和情境感知的多模态交通推荐算法研究(No. 2021zzts0735) <br />
-          <b>负责人</b>; 经费:1万元 <br />
-          中南大学研究生自主探索项目 <br />
+        <p>*** <br />
+          <b>负责人</b>; 经费:*** <br />
+           *** <br />
         </p>
       </li>
     </ul>
-    <ul>
-      <li>
-        <p>面向厂区货车的融合式导航系统研究(No. GCX2020347Y) <br />
-          <b>负责人</b>; 经费:1万元 <br />
-          中南大学校企合作项目 <br />
-        </p>
-      </li>
-    </ul>
-    <ul>
-      <li>
-        <p>面向机器人的适应性智能导航与场景感知(No. 2021zzts0753) <br />
-          参与人; 经费:1万元 <br />
-          中南大学研究生自主探索项目 <br /></p>
-      </li>
-    </ul>
+    
     <div id="footer">
       <div id="footer-text">
         <br>Page Updated at 2023-06-07, by <a href="https://tuteng0915.github.io/">Teng Tu</a>.
       </div>
     </div>
+
   </div>
 </body>
 
