--- a/index.html
+++ b/index.html
@@ -73,19 +73,18 @@
 
     <ul>
       <li>
-        <p><a href="http://jos.org.cn/jos/article/abstract/5975?st=search">一种高效低能耗移动数据采集与无线充电策略</a> <br />
-          钟萍，<b>徐爱昆</b>，张艺雯，李亚婷，张一鸣，黄家玮，王建新 <br />
-          <i>软件学报, 2021. <a href="pdf/JOS.pdf">[PDF]</a></i>
+        <p><a href="https://keg.cs.tsinghua.edu.cn/jietang/publications/TKDE21-Du-et-al-CogKR.pdf">CogKR:Cognitive Graph for Multi-hop Knowledge Reasoning</a> <br />
+          Du Z, Zhou C, Yao J,  <b> Tu T </b>, Cheng L, Yang H, et al <br />
+          <i>IEEE Transactions on Knowledge and Data Engineering, 2021. <a href="pdf/JOS.pdf">[PDF]</a></i>
         </p>
       </li>
     </ul>
 
     <ul>
       <li>
-        <p><a href="https://www.sciencedirect.com/science/article/abs/pii/S1574119221000560">EMPC: Energy-Minimization
-            Path Construction for Data Collection and Wireless Charging in WRSN</a> <br />
-          Ping Zhong, <b>AiKun Xu</b>, Shigeng Zhang, Yiming Zhang and Yingwen Chen <br />
-          <i>Pervasive and Mobile Computing <b>(PMC)</b>, 2021. [JCR Q2]<a href="pdf/PMC.pdf">[PDF]</a></i>
+        <p><a href="https://arxiv.org/pdf/2303.14655.pdf">GOAL: A challenging knowledge-grounded video captioning benchmark for real-time soccer commentary generation</a> <br />
+          Qi J, Yu J, <b> Tu T </b>, et al. <br />
+          <i>arXiv:2303.14655, 2023</i>
         </p>
       </li>
     </ul>
