--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!--========== CSS ==========-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Responsive resume cv</title>
+        <title>涂腾 (Teng Tu)</title>
     </head>
     <body>
         <!--========== HEADER ==========-->
