--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <div class="company">Youth League Committee of Tsinghua University</div>
           </div><!--//meta-->
           <div class="details">
-            <p>Responsible for the design of a series of promotional materials such as the main visual and cultural shirts for large-scale events such as orientation, graduation, and student festivals in the Department of Computer Science and organizing the photography of computer department orientation, student festivals, school-level sports competitions and other activities.</p>
+            <p>Lead students from the Department of Computer Science, the Academy of Fine Arts, the School of Economics and Management, and the Department of Psychology to build more professional and easier-to-use generative AI tools and platforms, explore more cutting-edge and more pragmatic generative AI research directions, and promote broader and more active generative AI discussions environment</p>
           </div><!--//details-->
         </div><!--//item-->
 
