--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     rel='stylesheet' type='text/css'>
   <!-- FontAwesome JS-->
   <script defer src="assets/fontawesome/js/all.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+
   <!-- Global CSS -->
   <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
   <!-- Theme CSS -->
@@ -54,7 +56,7 @@
           </li>
           <li class="phone"><i class="fa-solid fa-phone"></i><a href="tel: +65 80672503">🇸🇬 +65 8067 2503</a>
           </li>
-          <li class="phone"><i class="fa-brands fa-weixin"></i><a href="tel: +65 80672503"> TT-20000915-tuteng </a>
+          <li class="phone"><i class="fa-brands fa-weixin"></i>TT-20000915-tuteng
           </li>
           <li class="github"><i class="fa-brands fa-github"></i><a href="https://github.com/tuteng0915">
               github.com/tuteng0915</a>
@@ -95,12 +97,11 @@
       <div class="interests-container container-block">
         <h2 class="container-block-title">Interests</h2>
         <ul class="list-unstyled interests-list">
-          <li>Theatre & Drama</li>
-          <li>Cooking & Baking</li>
-          <li>Graphic Design</li>
-          <li>Photograph</li>
-          <li>Badminton</li>
-          <li>Swimming</li>
+          <li><i class='bx bxs-album'> </i> &nbsp Theatre & Drama</li>
+          <li><i class='bx bxs-bowl-hot' ></i> &nbsp Cooking & Baking</li>
+          <li><i class='bx bxs-palette' ></i> &nbsp Graphic Design</li>
+          <li><i class='bx bxs-camera' ></i> &nbsp Photograph</li>
+          <li><i class='bx bx-swim' ></i> &nbsp Swimming</li>
         </ul>
       </div><!--//interests-->
 
@@ -133,7 +134,7 @@
           </div><!--//meta-->
           <div class="details">
             <p class="small-line">Focus on natural language processing, knowledge graph, data mining</p>
-            <p class="small-line">Co-publish Paper: CogKR:Cognitive Graph for Multi-hop Knowledge Reasoning</p>
+            <p class="small-line">Co-publish Paper: CogKR: Cognitive Graph for Multi-hop Knowledge Reasoning</p>
             <p class="author">Zhengxiao Du, Chang Zhou, Jiangchao Yao, <b>Teng Tu</b>, Letian Cheng, Hongxia Yang, Jingren Zhou</p>
             <p class="right-line">(IEEETKDE-2020-07-0735.R1)</p>
             <p class="small-line">Co-publish Paper: GOAL: A Challenging Knowledge-grounded Video Captioning Benchmark for Real-time Soccer Commentary Generation</p>
@@ -161,7 +162,7 @@
         <div class="item">
           <div class="meta">
             <div class="upper-row">
-              <h3 class="job-title">On-campus research</h3>
+              <h3 class="job-title">On-campus Research</h3>
               <div class="time">2021.11 - 2022.09</div>
             </div><!--//upper-row-->
             <div class="company">Tsinghua University Positive Psychology Research Center</div>
