--- a/index.html
+++ b/index.html
@@ -98,17 +98,17 @@
         <h2 class="container-block-title">Interests</h2>
         <ul class="list-unstyled interests-list">
           <li><i class='bx bxs-album'> </i> &nbsp Theatre & Drama</li>
-          <li><i class='bx bxs-bowl-hot' ></i> &nbsp Cooking & Baking</li>
-          <li><i class='bx bxs-palette' ></i> &nbsp Graphic Design</li>
-          <li><i class='bx bxs-camera' ></i> &nbsp Photograph</li>
-          <li><i class='bx bx-swim' ></i> &nbsp Swimming</li>
+          <li><i class='bx bxs-bowl-hot'></i> &nbsp Cooking & Baking</li>
+          <li><i class='bx bxs-palette'></i> &nbsp Graphic Design</li>
+          <li><i class='bx bxs-camera'></i> &nbsp Photograph</li>
+          <li><i class='bx bx-swim'></i> &nbsp Swimming</li>
         </ul>
       </div><!--//interests-->
 
     </div><!--//sidebar-wrapper-->
 
     <div class="main-wrapper">
-      
+
       <!-- 
       <section class="section summary-section">
         <h2 class="section-title"><span class="icon-holder"><i class="fa-solid fa-user"></i></span>Career Profile</h2>
@@ -122,7 +122,8 @@
       </section>-->
 
       <section class="section experiences-section">
-        <h2 class="section-title"><span class="icon-holder"><i class="fa-solid fa-briefcase"></i></span>Research Experiences</h2>
+        <h2 class="section-title"><span class="icon-holder"><i class="fa-solid fa-briefcase"></i></span>Research
+          Experiences</h2>
 
         <div class="item">
           <div class="meta">
@@ -135,10 +136,13 @@
           <div class="details">
             <p class="small-line">Focus on natural language processing, knowledge graph, data mining</p>
             <p class="small-line">Co-publish Paper: CogKR: Cognitive Graph for Multi-hop Knowledge Reasoning</p>
-            <p class="author">Zhengxiao Du, Chang Zhou, Jiangchao Yao, <b>Teng Tu</b>, Letian Cheng, Hongxia Yang, Jingren Zhou</p>
+            <p class="author">Zhengxiao Du, Chang Zhou, Jiangchao Yao, <b>Teng Tu</b>, Letian Cheng, Hongxia Yang,
+              Jingren Zhou</p>
             <p class="right-line">(IEEETKDE-2020-07-0735.R1)</p>
-            <p class="small-line">Co-publish Paper: GOAL: A Challenging Knowledge-grounded Video Captioning Benchmark for Real-time Soccer Commentary Generation</p>
-            <p class="author">Ji Qi, Jifan Yu, <b>Teng Tu</b>, Kunyu Gao, Yifan Xu, Xinyu Guan, Xiaozhi Wang, Yuxiao Dong, Bin Xu, Lei Hou, Juanzi Li, Jie Tang, Weidong Guo, Hui Liu, Yu Xu</p>
+            <p class="small-line">Co-publish Paper: GOAL: A Challenging Knowledge-grounded Video Captioning Benchmark
+              for Real-time Soccer Commentary Generation</p>
+            <p class="author">Ji Qi, Jifan Yu, <b>Teng Tu</b>, Kunyu Gao, Yifan Xu, Xinyu Guan, Xiaozhi Wang, Yuxiao
+              Dong, Bin Xu, Lei Hou, Juanzi Li, Jie Tang, Weidong Guo, Hui Liu, Yu Xu</p>
             <p class="right-line">(CIKM 2023 Resource Track)</p>
           </div><!--//details-->
         </div><!--//item-->
@@ -153,7 +157,9 @@
           </div><!--//meta-->
           <div class="details">
             <p class="small-line">As research assistant</p>
-            <p class="small-line">Responsible for sentiment classification and topic classification of telephone psychological consultation records during the COVID-19 epidemic, and establish a collaborative AI-assisted labeling platform.</p>
+            <p class="small-line">Responsible for sentiment classification and topic classification of telephone
+              psychological consultation records during the COVID-19 epidemic, and establish a collaborative AI-assisted
+              labeling platform.</p>
           </div><!--//details-->
         </div><!--//item-->
 
@@ -172,13 +178,11 @@
           </div><!--//details-->
         </div><!--//item-->
 
-
-
-
       </section><!--//section-->
 
       <section class="section experiences-section">
-        <h2 class="section-title"><span class="icon-holder"><i class="fa-solid fa-briefcase"></i></span>Internship Experiences</h2>
+        <h2 class="section-title"><span class="icon-holder"><i class="fa-solid fa-briefcase"></i></span>Internship
+          Experiences</h2>
 
         <div class="item">
           <div class="meta">
@@ -189,7 +193,9 @@
             <div class="company">Zhipu AI</div>
           </div><!--//meta-->
           <div class="details">
-            <p>Introduce a two-dimensional learnable Position Embedding to optimize the image input method of VQ Tokenizer based on BEiT2. After that, the VQ Tokenizer will be used for various downstream tasks such as generation and alignment.</p>
+            <p>Introduce a two-dimensional learnable Position Embedding to optimize the image input method of VQ
+              Tokenizer based on BEiT2. After that, the VQ Tokenizer will be used for various downstream tasks such as
+              generation and alignment.</p>
           </div><!--//details-->
         </div><!--//item-->
 
@@ -202,10 +208,11 @@
             <div class="company">Kuaishou</div>
           </div><!--//meta-->
           <div class="details">
-            <p>Based on multi-model knowledge graph and sequence annotation, entity disambiguation, text matching and other technologies, feedback knowledge videos for natural language query.</p>
+            <p>Based on multi-model knowledge graph and sequence annotation, entity disambiguation, text matching and
+              other technologies, feedback knowledge videos for natural language query.</p>
           </div><!--//details-->
         </div><!--//item-->
-      </section><!--//section-->
+
 
         <div class="item">
           <div class="meta">
@@ -216,10 +223,12 @@
             <div class="company">4Paradigm</div>
           </div><!--//meta-->
           <div class="details">
-            <p>Investigate cutting-edge solutions for knowledge extraction and graph link prediction in academia and industry. Provide technical and user experience suggestions for Graph products.</p>
+            <p>Investigate cutting-edge solutions for knowledge extraction and graph link prediction in academia and
+              industry. Provide technical and user experience suggestions for Graph products.</p>
           </div><!--//details-->
         </div><!--//item-->
 
+      </section><!--//section-->
 
       <section class="section experiences-section">
         <h2 class="section-title"><span class="icon-holder"><i class="fa-solid fa-briefcase"></i></span>Activities</h2>
@@ -233,7 +242,10 @@
             <div class="company">Department of Computer Science, Tsinghua University</div>
           </div><!--//meta-->
           <div class="details">
-            <p>Responsible for the design of a series of promotional materials such as the main visual and cultural shirts for large-scale events such as orientation, graduation, and student festivals in the Department of Computer Science and organizing the photography of computer department orientation, student festivals, school-level sports competitions and other activities.</p>
+            <p>Responsible for the design of a series of promotional materials such as the main visual and cultural
+              shirts for large-scale events such as orientation, graduation, and student festivals in the Department of
+              Computer Science and organizing the photography of computer department orientation, student festivals,
+              school-level sports competitions and other activities.</p>
           </div><!--//details-->
         </div><!--//item-->
 
@@ -246,7 +258,10 @@
             <div class="company">Youth League Committee of Tsinghua University</div>
           </div><!--//meta-->
           <div class="details">
-            <p>Lead students from the Department of Computer Science, the Academy of Fine Arts, the School of Economics and Management, and the Department of Psychology to build more professional and easier-to-use generative AI tools and platforms, explore more cutting-edge and more pragmatic generative AI research directions, and promote broader and more active generative AI discussions environment</p>
+            <p>Lead students from the Department of Computer Science, the Academy of Fine Arts, the School of Economics
+              and Management, and the Department of Psychology to build more professional and easier-to-use generative
+              AI tools and platforms, explore more cutting-edge and more pragmatic generative AI research directions,
+              and promote broader and more active generative AI discussions environment</p>
           </div><!--//details-->
         </div><!--//item-->
 
