--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
       <div class="contact-container container-block">
         <ul class="list-unstyled contact-list">
           <li class="nation">
-            <i class="fa-solid fa-globe"></i> Nationality: Chinese
+            <i class="fa-solid fa-globe"></i>Chinese
           </li>
           <li class="Age">
             <i class="fa-solid fa-user"></i>Age: 22
           </li>
           <li class="gender">
-            <i class="fa-solid fa-person"></i>Gender: Male
+            <i class="fa-solid fa-person"></i> Gender: Male
           </li>
           <li class="email">
             <i class="fa-solid fa-envelope"></i><a href="mailto: leotuteng@126.com">leotuteng@126.com</a>
@@ -208,8 +208,7 @@
             <div class="company">Kuaishou</div>
           </div><!--//meta-->
           <div class="details">
-            <p>Based on multi-model knowledge graph and sequence annotation, entity disambiguation, text matching and
-              other technologies, feedback knowledge videos for natural language query.</p>
+            <p>Implement a project that uses natural language to query knowledgeable videos, based on the multi-model knowledge graph, with a pipeline including sequence annotation, entity disambiguation, and text matching. </p>
           </div><!--//details-->
         </div><!--//item-->
 
@@ -224,7 +223,7 @@
           </div><!--//meta-->
           <div class="details">
             <p>Investigate cutting-edge solutions for knowledge extraction and graph link prediction in academia and
-              industry. Provide technical and user experience suggestions for Graph products.</p>
+              industry. Provide technical and user experience suggestions for 4Paradigm's knowledge graph products.</p>
           </div><!--//details-->
         </div><!--//item-->
 
@@ -242,10 +241,7 @@
             <div class="company">Department of Computer Science, Tsinghua University</div>
           </div><!--//meta-->
           <div class="details">
-            <p>Responsible for the design of a series of promotional materials such as the main visual and cultural
-              shirts for large-scale events such as orientation, graduation, and student festivals in the Department of
-              Computer Science and organizing the photography of computer department orientation, student festivals,
-              school-level sports competitions and other activities.</p>
+            <p>Responsible for the design of promotional materials (such as main posters, cultural shirts, etc.), responsible for organizing publicity and on-site photography, and participating in the planning of large-scale activities of the Department of Computer Science (such as Student Day, Orientation, Graduation, etc.)</p>
           </div><!--//details-->
         </div><!--//item-->
 
@@ -258,10 +254,10 @@
             <div class="company">Youth League Committee of Tsinghua University</div>
           </div><!--//meta-->
           <div class="details">
-            <p>Lead students from the Department of Computer Science, the Academy of Fine Arts, the School of Economics
+            <p>Organize students from the Department of Computer Science, the Academy of Fine Arts, the School of Economics
               and Management, and the Department of Psychology to build more professional and easier-to-use generative
-              AI tools and platforms, explore more cutting-edge and more pragmatic generative AI research directions,
-              and promote broader and more active generative AI discussions environment</p>
+              AI tools and platforms, to explore more cutting-edge and more pragmatic generative AI research directions,
+              and to promote broader and more active generative AI discussions environment</p>
           </div><!--//details-->
         </div><!--//item-->
 
