--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <p class="small-line">Co-publish Paper: CogKR: Cognitive Graph for Multi-hop Knowledge Reasoning</p>
             <p class="author">Zhengxiao Du, Chang Zhou, Jiangchao Yao, <b>Teng Tu</b>, Letian Cheng, Hongxia Yang,
               Jingren Zhou</p>
-            <p class="right-line">(IEEETKDE-2020-07-0735.R1)</p>
+            <p class="right-line">(IEEE TKDE-2020-07-0735.R1)</p>
             <p class="small-line">Co-publish Paper: GOAL: A Challenging Knowledge-grounded Video Captioning Benchmark
               for Real-time Soccer Commentary Generation</p>
             <p class="author">Ji Qi, Jifan Yu, <b>Teng Tu</b>, Kunyu Gao, Yifan Xu, Xinyu Guan, Xiaozhi Wang, Yuxiao
@@ -156,7 +156,7 @@
             <div class="company">Tsinghua University Positive Psychology Research Center</div>
           </div><!--//meta-->
           <div class="details">
-            <p class="small-line">As research assistant</p>
+            <p class="small-line">As Research Assistant</p>
             <p class="small-line">Responsible for sentiment classification and topic classification of telephone
               psychological consultation records during the COVID-19 epidemic, and establish a collaborative AI-assisted
               labeling platform.</p>
@@ -173,8 +173,8 @@
           </div><!--//meta-->
           <div class="details">
             <p class="small-line">Focus on knowledge graph-assisted recommendation system.</p>
-            <p class="small-line">Publish Preprint: RCK: Recommendation System with Cross-Domain Knowledge</p>
-            <p class="author"><b>Tu Teng</b>, Huang Xinwen, Giorgos Mamakoukas</p>
+            <p class="small-line">Publish Preprint: RCK: Recommendation System with Cross-Domain Knowledge (In Progress)</p>
+            <p class="author"> work with: Xinwen Huang, Giorgos Mamakoukas</p>
           </div><!--//details-->
         </div><!--//item-->
 
@@ -195,7 +195,8 @@
           <div class="details">
             <p>Introduce a two-dimensional learnable Position Embedding to optimize the image input method of VQ
               Tokenizer based on BEiT2. After that, the VQ Tokenizer will be used for various downstream tasks such as
-              generation and alignment.</p>
+              generation and alignment. (In Progress)</p>
+            <p class="author"> work with: Ming Ding, Zhuoyi Yang</p>
           </div><!--//details-->
         </div><!--//item-->
 
@@ -208,42 +209,31 @@
             <div class="company">Kuaishou</div>
           </div><!--//meta-->
           <div class="details">
-            <p>Implement a project that uses natural language to query knowledgeable videos, based on the multi-model knowledge graph, with a pipeline including sequence annotation, entity disambiguation, and text matching. </p>
+            <p>Implement a project that uses natural language to query knowledgeable videos, knowing as Kuaizhi Search, based on the multi-model knowledge graph, with a pipeline including sequence annotation, entity disambiguation, and text matching. </p>
+            <p class="author"> work with: Haojie Pan</p>
           </div><!--//details-->
         </div><!--//item-->
 
-
+<!-- 
         <div class="item">
           <div class="meta">
             <div class="upper-row">
               <h3 class="job-title">Natural Language Processing Intern</h3>
               <div class="time">2021.07-2021.08</div>
-            </div><!--//upper-row-->
+            </div>
             <div class="company">4Paradigm</div>
-          </div><!--//meta-->
+          </div>
           <div class="details">
             <p>Investigate cutting-edge solutions for knowledge extraction and graph link prediction in academia and
               industry. Provide technical and user experience suggestions for 4Paradigm's knowledge graph products.</p>
-          </div><!--//details-->
-        </div><!--//item-->
+          </div>
+        </div> 
+-->
 
       </section><!--//section-->
 
       <section class="section experiences-section">
         <h2 class="section-title"><span class="icon-holder"><i class="fa-solid fa-briefcase"></i></span>Activities</h2>
-
-        <div class="item">
-          <div class="meta">
-            <div class="upper-row">
-              <h3 class="job-title">Head of Graphic Team, Publicity Center</h3>
-              <div class="time">2021.07 - 2022.08</div>
-            </div><!--//upper-row-->
-            <div class="company">Department of Computer Science, Tsinghua University</div>
-          </div><!--//meta-->
-          <div class="details">
-            <p>Responsible for the design of promotional materials (such as main posters, cultural shirts, etc.), responsible for organizing publicity and on-site photography, and participating in the planning of large-scale activities of the Department of Computer Science (such as Student Day, Orientation, Graduation, etc.)</p>
-          </div><!--//details-->
-        </div><!--//item-->
 
         <div class="item">
           <div class="meta">
@@ -258,6 +248,19 @@
               and Management, and the Department of Psychology to build more professional and easier-to-use generative
               AI tools and platforms, to explore more cutting-edge and more pragmatic generative AI research directions,
               and to promote broader and more active generative AI discussions environment</p>
+          </div><!--//details-->
+        </div><!--//item-->
+
+        <div class="item">
+          <div class="meta">
+            <div class="upper-row">
+              <h3 class="job-title">Head of Graphic Team, Publicity Center</h3>
+              <div class="time">2021.07 - 2022.08</div>
+            </div><!--//upper-row-->
+            <div class="company">Department of Computer Science, Tsinghua University</div>
+          </div><!--//meta-->
+          <div class="details">
+            <p>Responsible for the design of promotional materials (such as main posters, cultural shirts, etc.), responsible for organizing publicity and on-site photography, and participating in the planning of large-scale activities of the Department of Computer Science (such as Student Day, Orientation, Graduation, etc.)</p>
           </div><!--//details-->
         </div><!--//item-->
 
