add more details in zhipu

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <p class="small-line">Focus on natural language processing, knowledge graph, data mining</p>
             <p class="small-line">Co-publish Paper: CogKR: Cognitive Graph for Multi-hop Knowledge Reasoning</p>
             <p class="author">Zhengxiao Du, Chang Zhou, Jiangchao Yao, <b>Teng Tu</b>, Letian Cheng, Hongxia Yang,
-              Jingren Zhou</p>
+              Jingren Zhou, Jie Tang</p>
             <p class="right-line">(IEEE TKDE-2020-07-0735.R1)</p>
             <p class="small-line">Co-publish Paper: GOAL: A Challenging Knowledge-grounded Video Captioning Benchmark
               for Real-time Soccer Commentary Generation</p>
@@ -194,9 +194,9 @@
           </div><!--//meta-->
           <div class="details">
             <p>Introduce a two-dimensional learnable Position Embedding to optimize the image input method of VQ
-              Tokenizer based on BEiT2. After that, the VQ Tokenizer will be used for various downstream tasks such as
-              generation and alignment. (In Progress)</p>
-            <p class="author"> work with: Ming Ding, Zhuoyi Yang</p>
+              Tokenizer based on BEiT2. The VQ Tokenizer will serve as backbone for various generation and alignment downstream tasks,
+              one of which is known as CogVLM. (In Progress)</p>
+            <p class="author"> work with: Ming Ding, Zhuoyi Yang, Jie Tang</p>
           </div><!--//details-->
         </div><!--//item-->
 
