add more details in zhipu

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           </div><!--//meta-->
           <div class="details">
             <p class="small-line">Focus on knowledge graph-assisted recommendation system.</p>
-            <p class="small-line">Publish Preprint: RCK: Recommendation System with Cross-Domain Knowledge (In Progress)</p>
+            <p class="small-line">Preprint: RCK: Recommendation System with Cross-Domain Knowledge (In Progress)</p>
             <p class="author"> work with: Xinwen Huang, Giorgos Mamakoukas</p>
           </div><!--//details-->
         </div><!--//item-->
