--- a/index.html
+++ b/index.html
@@ -139,13 +139,25 @@
             <p class="author">Zhengxiao Du, Chang Zhou, Jiangchao Yao, <b>Teng Tu</b>, Letian Cheng, Hongxia Yang,
               Jingren Zhou, Jie Tang</p>
             <p class="right-line">(IEEE TKDE-2020-07-0735.R1)</p>
+
             <p class="small-line">Co-publish Paper: GOAL: A Challenging Knowledge-grounded Video Captioning Benchmark
               for Real-time Soccer Commentary Generation</p>
             <p class="author">Ji Qi, Jifan Yu, <b>Teng Tu</b>, Kunyu Gao, Yifan Xu, Xinyu Guan, Xiaozhi Wang, Yuxiao
               Dong, Bin Xu, Lei Hou, Juanzi Li, Jie Tang, Weidong Guo, Hui Liu, Yu Xu</p>
             <p class="right-line">(CIKM 2023 Resource Track)</p>
+
+            <p class="small-line">Co-publish Paper: ContextCam: Bridging Context Awareness with Creative Human-AI Image Co-Creation</p>
+            <p class="author"> Xianzhe Fan, Zihan Wu, Chun Yu, Fenggui Rao, Weinan Shi, Teng Tu</p>
+            <p class="right-line">(CHI'24)</p>
+
           </div><!--//details-->
         </div><!--//item-->
+
+
+        
+
+
+        https://dl.acm.org/doi/10.1145/3613904.3642129
 
         <div class="item">
           <div class="meta">
