update linkdin url

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </li>
           <li class="other1">
             <a href="https://space.bilibili.com/269754588"><i class="fa-brands fa-bilibili"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/in/leo-tu-4445b132a"><i class="fa-brands fa-linkedin-in"></i></a>
             <a href="#"><i class="fa-brands fa-twitter"></i></a>
             <a href="#"><i class="fa-brands fa-discord"></i></a>
             <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
